--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -94,10 +94,8 @@
         margin-top: 15px;
     }
     .num-list{
-        padding: 15px;
-        height: 250px;
         p{
-            width: 33.333333%;
+            width: 25%;
             float:left;
             padding: 66px 0;
             span,strong{
@@ -457,6 +455,26 @@
                     border-bottom: 1px solid #e6e6e6;
                     padding: 5px 10px;
                     line-height: 24px;
+                }
+            }
+        }
+        .custorm-tooltip{
+            .box{
+                padding: 10px 0;
+                .title{
+                    margin-bottom: 10px;
+                    margin-top: 5px;
+                }
+                .tooltip-item{
+                    height: 20px;
+                    line-height:20px;
+                    span{
+                        float:left;
+                    }
+                    span+span{
+                        float: right;
+                        margin-left: 30px;
+                    }
                 }
             }
         }
